--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,8 +8,11 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/GameMode_BP.GameMode_BP_C
-EditorStartupMap=/Game/Maps/TestMap.TestMap
-GameDefaultMap=/Game/Maps/TestMap.TestMap
+EditorStartupMap=/Game/Maps/PersistentLevel1.PersistentLevel1
+GameDefaultMap=/Game/Maps/PersistentLevel1.PersistentLevel1
+
+[/Script/Engine.Engine]
+bSmoothFrameRate=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
